# rag_system

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .env  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: admin.py  chat.py  deps.py
backend/data/: tracking.db  tracking.db-shm  tracking.db-wal
backend/data/chroma/: chroma.sqlite3
backend/data/watch/: amazon_smart_thermostat_specs.md  amazon_thermostat_demand_response.md  nest.txt  nest_thermostat_demand_response.md  nest_thermostat_specs.md  nest_vs_amazon_comparisons.md  thermostat_competitor_comparison.md
backend/models/: db.py
backend/pipelines/ingestion/: chunker.py  file_tracker.py  loaders.py  sync.py  vector_store.py
backend/pipelines/retrieval/: graph.py  prompts.py  retriever.py
backend/tests/: conftest.py  test_chunker.py  test_file_tracker.py  test_graph.py  test_loaders.py  test_retriever.py  test_sync.py  test_vector_store.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: chat.js
frontend/src/components/: ChatWindow.jsx  InputBar.jsx  MessageBubble.jsx  Sidebar.jsx
frontend/src/hooks/: useChat.js
