[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.10.10",
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "chromadb==0.5.18",
    "docx2txt==0.8",
    "fastapi==0.115.0",
    "html2text==2024.2.26",
    "httpx==0.27.2",
    "langchain==0.3.7",
    "langchain-chroma==0.1.4",
    "langchain-core==0.3.15",
    "langchain-experimental==0.3.3",
    "langchain-google-genai==2.0.4",
    "langgraph==0.2.38",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pymupdf==1.24.11",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "requests==2.32.3",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]
